static/stylesheets/combined-fb.css
body {
    width: 520px;
    margin: 0 auto;
}

.top {
    width: 520px;
}

.top-wrap-tour {
    width: 520px;
}

.top-right {
    float: none;
    margin-left: 20px;
}

.top-right div {
    padding: 0 17px 0 0;
}

.contact-btn {
    width: 260px;
    padding: 80px 0px 0px;
}

#like_content .contact-btn {
    width: 350px;
}

.contact-btn img {
    width: 80px;
    margin-top: -10px;
    margin-left: -10px;
    margin-right: 20px;
}

.slogan {
    width: 520px;
    text-align: center;
    padding: 45px 0px 0px;
}

.slogan h2 {
    font-size: 1.2em;
}

.top-middle-wrap {
    height: 280px;
}

#like_content .top-middle-wrap {
    height: 250px;
}

.top-middle {
    width: 520px;
}

.bottom-middle-wrap {
    height: 670px;
}

#fb_invite_wrapper {
    height: 500px;
    padding-left: 10px;
}

.bottom-middle {
    width: 520px;
}

.footer {
    width: 520px;
}

.footer-left {
    margin: 45px 0 0 37px;
}

.like_button {
    width: 80px;
    margin: 0 auto;
    overflow: hidden;
}

.fanbox {
	width: 403px; margin: 0 auto;
}

.fan_box .full_widget {
		background: none; border: none;
	}
	.fan_box .connections_grid .grid_item {
		padding: 0 8px 10px 8px;
	}
		.fan_box .connections_grid .grid_item a img {
			box-shadow: 0px 0px 10px #333; -moz-box-shadow: 0px 0px 10px #333; -webkit-box-shadow: 0px 0px 10px #333;
		}
			.fan_box .connections_grid .grid_item a:hover img {
				box-shadow: 0px 3px 10px #333; -moz-box-shadow: 0px 3px 10px #333; -webkit-box-shadow: 0px 3px 10px #333;
			}
	.fan_box .full_widget .connect_top {
		display: none;
	}
	.fan_box .connections .connections_grid {
		padding-top:16px;
	}
	.fan_box .connections {
		border-top: none;
		padding:15px 0 0;
		color: black;
		font: 27px League Gothic;
		text-align: center;
	}

	.fan_box .connections_grid .grid_item .name {
		color: #ccc;
		font-size: 11px;
	}
	.fan_box .profileimage {
		margin: 0;
	}

